2015-03-07  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Handle warnings 
	as well as error messages.
	* close.c (close_command_cleanup) <CF_blockitem>: More complete.
	* multitable.c (gather_previous_item): Implement.

2015-03-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* counter.c: New file.
	* commands.h (command_name): New macro.

2015-03-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (parse_line_commanad_args) <CM_defindex>: Call 
	add_index.
	* handle_commands.c (handle_misc_command) <CM_node>: Set 
	remaining_args on element.
	* api.c (element_to_perl_hash): Output 'line_nr'.

2015-02-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree_types.h (enum extra_type): Add extra_deleted.
	* parser.c (abort_empty_line): Remove "spaces_before_argument" 
	extra value.
	(process_remaining_on_line): Add check for empty input ("EMPTY 
	TEXT").

2015-02-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* macro.c (store_value, fetch_value): New functions.
	* end_line.c (parse_special_misc_command): First implementation.  
	Handle @value.
	* handle_commands.c (handle_misc_command) <MISC_special etc.>: 
	More complete.
	* parser.c (process_remaining_on_line): Handle @value.

2015-02-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* api.c (build_index_data): New function.

2015-02-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* api.c (build_texinfo_tree, build_label_list): New functions,
	to construct Perl objects directly in memory, as a possible 
	replacement for using "eval" in Perl.
	* Makefile.am (AM_CFLAGS): Add flags for linking with Perl 
	libraries.

	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Add another
	way to get data from C program (disabled).  (Indices not done 
	yet.)

2015-02-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree.c (insert_into_contents): Update parent field of inserted 
	element.

2015-02-14  Gavin Smith  <gavinsmith0123@gmail.com>
